--- a/Slider.MVC.WebApplication2/html fontAwe/HtmlPage1.html
+++ b/Slider.MVC.WebApplication2/html fontAwe/HtmlPage1.html
@@ -4,11 +4,25 @@
     <link href="../Content/font-awesome.css" rel="stylesheet" />
     </head>
 <body>
-    
+
     <i class="fa fa-chevron-right"></i>
     <i class="fa fa-chevron-left"></i>
 
-   
+    <i class='fa fa-angle-right' style='font-size:60px'></i>
+    <i class='fa fa-angle-left' style='font-size:60px'></i>
+
+    <i class='fa fa-arrow-right' style='font-size:60px'></i>
+    <i class='fa fa-arrow-left' style='font-size:60px'></i>
+
+    <i class='fa fa-caret-right' style='font-size:60px'></i>
+    <i class='fa fa-caret-left' style='font-size:60px'></i>
+
+
+    <i class='fa fa-chevron-circle-right' style='font-size:60px'></i>
+    <i class='fa fa-chevron-circle-left' style='font-size:60px'></i>
+
+
+
 
 </body>
 </html> 
